Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: __GCC_HAVE_DWARF2_CFI_ASM
TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
TODO: swap_sv not undone in pool
TODO: croak when async_pool triesd to runc anceled thread?

	- restore portability to perl 5.8.x.
        - allow zero as agrument to Coro::Channel to mean the same thing
          as no argument. this works with older versions as well,
          but wasn't legal until now.

6.39 Mon Jun  2 00:00:08 CEST 2014
	- work around more incompatible changes in 5.20.

6.38 Sun Jun  1 21:54:23 CEST 2014
	- check that perl slots actually have enough space to hold
          interpreter variables.
	- untested port to perl 5.19 (64 bit tmps indices) (reported
          by Andreas König).
	- croak when cancel is called without a thread context.

6.37 Tue Mar  4 13:27:33 CET 2014
	- *sigh*, removed leftover debugging code from debugging a
          perl bug, of all things.

6.36 Tue Mar  4 07:11:59 CET 2014
	- semaphores would not clear the destroy hook when interrupted
          by ->throw, causing segfaults or worse.
        - ->throw on a thread waiting for a semaphore did not acquire
          the semaphore, but also didn't wake up other waiters,
          possibly causing a deadlock.
	- "FATAL: $Coro::IDLE blocked itself" will now use Carp::confess
          to report a full stacktrace, which should help find out
          where the actual call is.
        - "atomically" destroy data in slf_destroy, because it is
          the right thing to do, just in case.
        - disable ecb.h libm dependency, to compile on ancient systems
          or under adverse conditions.

6.33 Mon Nov 18 11:26:27 CET 2013
	- do not crash when freeing padlists with holes (in 5.18).
	- tentative SVt_BIND 5.19 port/fix.

6.32 Tue Nov  5 15:35:35 CET 2013
	- use a new algorithm to derive padlists for perl 5.18. The old