@@ -5,10 +5,13 @@ TODO: channel->maxsize(newsize)?
 TODO: __GCC_HAVE_DWARF2_CFI_ASM
 TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
 TODO: swap_sv not undone in pool
-TODO: croak when async_pool triesd to runc anceled thread?
+TODO: croak when async_pool triesd to run canceled thread?
 
 	- restore portability to perl 5.8.x.
-        - allow zero as agrument to Coro::Channel to mean the same thing
+        - give new Coro's a valid GvHV(PL_hintgv) - this is slow and takes
+          up some memory, but fixes "use feature" and similar modules
+          when used inside a Coro.
+        - allow zero as argument to Coro::Channel to mean the same thing
           as no argument. this works with older versions as well,
           but wasn't legal until now.
 
